# voice-inn-linux

./: .env.exsmple  .gitignore  README.md  SETUP_UV.md  VoiceIn.spec  backlog.md  debug_groq.py  diff.txt  explanation.md  main.py  pyproject.toml  requirements.txt  verify_rust_features.py  verify_rust_recorder.py
.github/workflows/: build.yml  ci.yml
docs/: DEVELOPMENT.md  README_en.md  README_fr.md  README_ko.md  README_kr.md  README_zh.md
issues/: BUG-001_voicein_persistent_idle_i18n_tray_icon.md  BUG-002_device_test_microphone_error.md  BUG-003_multiple_recordings_error_gain.md  FEAT-001_context_aware_prompt_optimization.md  HIST-001_transcription_history_store_last_50.md  ISSUE_SUMMARY.md  ISSUE_TEMPLATE.md  SYNC-001_integration_wizard_history_settings.md  UI-001_history_browser_dialog.md  UX-001_initial_setup_wizard.md
rust_core/: Cargo.toml
rust_core/src/: lib.rs  recorder.rs
src/: main.py
src/ai/: worker.py
src/ai/providers/: base.py  gemini.py  groq.py  local.py
src/audio/: recorder.py  vad.py
src/core/: config.py  const.py  context_prompt.py  history.py  i18n.py  utils.py  window_detector.py
src/ui/: history.py  overlay.py  settings.py  setup.py  widgets.py
